-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
3
-
7304
Sanity 17n failed with 2 MDTs.
== sanity test 17n: run e2fsck against master/slave MDT which contains remote dir == 06:09:07 (1388844547)
stop and checking mds2: e2fsck -fnvd /tmp/lustre-mdt2
Stopping /mnt/mds2 (opts
on testnode
e2fsck 1.42.3.wc3 (15-Aug-2012)
Pass 1: Checking inodes, blocks, and sizes
Pass 2: Checking directory structure
Pass 3: Checking directory connectivity
Pass 4: Checking reference counts
Inode 50009 ref count is 1, should be 2. Fix? no
Pass 5: Checking group summary information
lustre-MDT0001: ********** WARNING: Filesystem still has errors **********
136 inodes used (0.14%)
1 non-contiguous file (0.7%)
0 non-contiguous directories (0.0%)
- of inodes with ind/dind/tind blocks: 0/0/0
16904 blocks used (33.81%)
0 bad blocks
1 large file
86 regular files
41 directories
0 character device files
0 block device files
0 fifos
2 links
0 symbolic links (0 fast symbolic links)
0 sockets
--------
129 files
sanity test_17n: @@@@@@ FAIL: e2fsck report error
Trace dump:
= /work/lustre-release/lustre/tests/test-framework.sh:4013:error_noexit()
= /work/lustre-release/lustre/tests/test-framework.sh:4036:error()
= sanity.sh:660:test_17n()
= /work/lustre-release/lustre/tests/test-framework.sh:4276:run_one()
= /work/lustre-release/lustre/tests/test-framework.sh:4309:run_one_logged()
= /work/lustre-release/lustre/tests/test-framework.sh:4130:run_test()
= sanity.sh:662:main()
Dumping lctl log to /tmp/test_logs/1388844546/sanity.test_17n.*.1388844547.log
Dumping logs only on local client.
FAIL 17n (0s)
.....................................................................................................................................................................................................................................................................................................resend_count is set to 4 4
...resend_count is set to 4 4
....resend_count is set to 4 4
.resend_count is set to 4 4
...resend_count is set to 4 4
................................................................................................................== sanity test complete, duration 2 sec == 06:09:08 (1388844548)
sanity: FAIL: test_17n e2fsck report error
- is duplicated by
-
LU-3113 Create remote directory failed after upgrade from 1.8.9 to 2.4, add a new MDT.
-
- Resolved
-